@@ -1,0 +1,40 @@
+// Tweaks from DaringSoule<daringsoule@bluevalley.net>. Thanks a lot!
+//speed tweaks
+user_pref("content.max.tokenizing.time", true);
+user_pref("content.notify.ontimer", true);
+user_pref("network.http.pipelining.firstrequest", true);
+user_pref("network.http.pipelining.ssl", true);
+user_pref("network.http.proxy.pipelining", true);
+user_pref("content.max.tokenizing.time", 3000000);
+user_pref("content.maxtextrun", 8191);
+user_pref("content.notify.backoffcount", 200);
+user_pref("content.notify.interval", 100000);
+user_pref("content.notify.threshold", 100000);
+user_pref("content.switch.threshold", 650000);
+user_pref("network.dnsCacheEntries", 256);
+user_pref("network.dnsCacheExpiration", 86400);
+user_pref("network.ftp.idleConnectionTimeout", 60);
+user_pref("network.http.keep-alive.timeout", 30);
+user_pref("network.http.max-persistent-connections-per-proxy", 24);
+user_pref("nglayout.initialpaint.delay", 0);
+user_pref("network.http.pipelining.maxrequests", 8);
+user_pref("network.http.max-connections", 96);
+user_pref("network.http.max-connections-per-server", 32);
+user_pref("network.http.max-persistent-connections-per-server", 8);
+
+//other tweaksuser_pref("network.http.max-persistent-connections-per-server", 8);
+user_pref("config.trim_on_minimize", true);
+user_pref("ui.submenuDelay", 0);
+user_pref("network.prefetch-next", false);
+user_pref("dom.disable_window_open_feature.menubar", true);
+user_pref("dom.disable_window_move_resize", true);
+user_pref("dom.disable_window_open_feature.titlebar", true);
+user_pref("dom.disable_window_open_feature.toolbar", true);
+user_pref("security.dialog_enable_delay", 0);
+user_pref("mousewheel.withaltkey.action", 1);
+user_pref("network.protocol-handler.app.ed2k", '/usr/bin/ed2k');
+user_pref("network.protocol-handler.external.ed2k", true);
+user_pref("toolkit.scrollbox.scrollIncrement", 75);
+user_pref("browser.urlbar.autoFill", true);
+
+
