@@ -1,4 +1,8 @@
-2010-04-26 Ma Yue <velly.empire@gmail.com>
+2010-04-28 MA Yue <velly.empire@gmail.com>
+
+    * Add some tweak of Firefox
+
+2010-04-26 MA Yue <velly.empire@gmail.com>
 
     * Change the installation of World of padman in Fedora
     * Add the function of backup Gconfig Setting
